toolchain/internal/core/analysis/testdata/errors/structure/duplicate_field_in_inline.vdl
// @expect: E703

type User {
	data: {
		id: string
		id: int
	}
}
